RESOLVED FIXED 202291
IDBTransaction / IDBObjectStore should not prevent a page from entering the back / forward cache
https://bugs.webkit.org/show_bug.cgi?id=202291
Summary IDBTransaction / IDBObjectStore should not prevent a page from entering the b...
Chris Dumez
Reported 2019-09-26 15:03:01 PDT
IDBTransaction / IDBObjectStore should not prevent a page from entering the back / forward cache. This is causing transient failures to cache on weather.com.
Attachments
Patch (5.70 KB, patch)
2019-09-26 15:06 PDT, Chris Dumez
no flags
Patch (5.70 KB, patch)
2019-09-27 08:56 PDT, Chris Dumez
no flags
Patch (8.10 KB, patch)
2019-09-27 13:53 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-09-26 15:03:22 PDT
Chris Dumez
Comment 2 2019-09-26 15:06:55 PDT
Chris Dumez
Comment 3 2019-09-27 08:56:57 PDT
Geoffrey Garen
Comment 4 2019-09-27 11:44:23 PDT
fast/history/page-cache-indexed-opened-db.html failure looks real.
Chris Dumez
Comment 5 2019-09-27 13:53:57 PDT
Chris Dumez
Comment 6 2019-09-27 13:58:32 PDT
(In reply to Geoffrey Garen from comment #4) > fast/history/page-cache-indexed-opened-db.html failure looks real. Progression!
Chris Dumez
Comment 7 2019-09-30 14:44:48 PDT
Ping review?
Geoffrey Garen
Comment 8 2019-09-30 14:47:47 PDT
Comment on attachment 379761 [details] Patch r=me
WebKit Commit Bot
Comment 9 2019-09-30 15:33:38 PDT
Comment on attachment 379761 [details] Patch Clearing flags on attachment: 379761 Committed r250531: <https://trac.webkit.org/changeset/250531>
WebKit Commit Bot
Comment 10 2019-09-30 15:33:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.